Added support for a few xsd features not supported by the import