@@ -16,92 +16,109 @@
 
 package com.regnosys.rosetta.tools.modelimport;
 
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
-import javax.inject.Inject;
-
-import org.xmlet.xsdparser.xsdelements.XsdAbstractElement;
-import org.xmlet.xsdparser.xsdelements.XsdSimpleType;
-import org.xmlet.xsdparser.xsdelements.xsdrestrictions.XsdEnumeration;
-
 import com.regnosys.rosetta.rosetta.RosettaEnumValue;
 import com.regnosys.rosetta.rosetta.RosettaEnumeration;
 import com.regnosys.rosetta.rosetta.RosettaFactory;
 import com.rosetta.util.serialisation.TypeXMLConfiguration;
+import org.xmlet.xsdparser.xsdelements.XsdAbstractElement;
+import org.xmlet.xsdparser.xsdelements.XsdSimpleType;
+import org.xmlet.xsdparser.xsdelements.XsdUnion;
+import org.xmlet.xsdparser.xsdelements.xsdrestrictions.XsdEnumeration;
+
+import javax.inject.Inject;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class XsdEnumImport extends AbstractXsdImport<XsdSimpleType, RosettaEnumeration> {
-	
-	private final XsdUtil util;
 
-	@Inject
-	public XsdEnumImport(XsdUtil util) {
-		super(XsdSimpleType.class);
-		this.util = util;
-	}
+    private final XsdUtil util;
 
-	@Override
-	public List<XsdSimpleType> filterTypes(List<XsdAbstractElement> elements) {
-		return super.filterTypes(elements).stream()
-			.filter(x -> util.isEnumType(x))
-			.collect(Collectors.toList());
-	}
+    @Inject
+    public XsdEnumImport(XsdUtil util) {
+        super(XsdSimpleType.class);
+        this.util = util;
+    }
 
-	@Override
-	public RosettaEnumeration registerType(XsdSimpleType xsdType, RosettaXsdMapping typeMappings, ImportTargetConfig targetConfig) {
-		RosettaEnumeration rosettaEnumeration = RosettaFactory.eINSTANCE.createRosettaEnumeration();
-		rosettaEnumeration.setName(xsdType.getName());
-		util.extractDocs(xsdType).ifPresent(rosettaEnumeration::setDefinition);
-		typeMappings.registerEnumType(xsdType, rosettaEnumeration);
-		
-		List<XsdEnumeration> enumeration = xsdType.getAllRestrictions().stream().flatMap(r -> r.getEnumeration().stream()).toList();
+    @Override
+    public List<XsdSimpleType> filterTypes(List<XsdAbstractElement> elements) {
+        return super.filterTypes(elements).stream()
+                .filter(util::isEnumType)
+                .collect(Collectors.toList());
+    }
 
-		enumeration.stream()
-			.filter(e -> !e.getValue().isEmpty())
-			.map(e -> this.registerEnumValue(e, typeMappings, targetConfig))
-			.forEach(rosettaEnumeration.getEnumValues()::add);
-		
-		return rosettaEnumeration;
-	}
+    @Override
+    public RosettaEnumeration registerType(XsdSimpleType xsdType, RosettaXsdMapping typeMappings, ImportTargetConfig targetConfig) {
+        RosettaEnumeration rosettaEnumeration = RosettaFactory.eINSTANCE.createRosettaEnumeration();
+        rosettaEnumeration.setName(xsdType.getName());
+        util.extractDocs(xsdType).ifPresent(rosettaEnumeration::setDefinition);
+        typeMappings.registerEnumType(xsdType, rosettaEnumeration);
 
-	@Override
-	public void completeType(XsdSimpleType xsdType, RosettaXsdMapping typeMappings) {
-		
-	}
+        // todo
+        List<XsdEnumeration> enumeration = Stream.concat(xsdType.getAllRestrictions().stream(),
+                        Optional.ofNullable(xsdType.getUnion()).map(XsdUnion::getUnionElements).stream().flatMap(Collection::stream).flatMap(r -> r.getAllRestrictions().stream()))
+                .flatMap(r -> r.getEnumeration().stream())
+                .toList();
 
-	private RosettaEnumValue registerEnumValue(XsdEnumeration ev, RosettaXsdMapping typeMappings, ImportTargetConfig targetConfig) {
-		String value = util.toEnumValueName(ev.getValue(), targetConfig);
-		RosettaEnumValue rosettaEnumValue = RosettaFactory.eINSTANCE.createRosettaEnumValue();
-		rosettaEnumValue.setName(value);
-		util.extractDocs(ev).ifPresent(rosettaEnumValue::setDefinition);
+        Set<String> enumValuesAdded = new HashSet<>();
+        enumeration.stream()
+                .filter(e -> !e.getValue().isEmpty())
+                .filter(x -> enumValuesAdded.add(x.getValue()))
+                .map(e -> this.registerEnumValue(e, typeMappings, targetConfig))
+                .forEach(rosettaEnumeration.getEnumValues()::add);
 
-		typeMappings.registerEnumValue(ev, rosettaEnumValue);
-		
-		return rosettaEnumValue;
-	}
-	
-	public Map<RosettaEnumeration, TypeXMLConfiguration> getXMLConfiguration(XsdSimpleType xsdType, RosettaXsdMapping xsdMapping, String schemaTargetNamespace) {		
-		Map<String, String> enumValueMap = new LinkedHashMap<>();
-		xsdType.getAllRestrictions().stream().flatMap(r -> r.getEnumeration().stream())
-			.forEach(ev -> {
-				RosettaEnumValue rosettaEnumValue = xsdMapping.getEnumValue(ev);
-				if (!rosettaEnumValue.getName().equals(ev.getValue())) {
-					enumValueMap.put(rosettaEnumValue.getName(), ev.getValue());
-				}
-			});
-		if (enumValueMap.isEmpty()) {
-			return Collections.emptyMap();
-		}
-		RosettaEnumeration rosettaEnumeration = xsdMapping.getRosettaEnumerationFromSimple(xsdType);
-		return Collections.singletonMap(rosettaEnumeration, new TypeXMLConfiguration(
-				Optional.empty(),
-				Optional.empty(),
-				Optional.empty(),
-				Optional.empty(),
-				Optional.of(enumValueMap)));
-	}
+        util.makeNamesUnique(rosettaEnumeration.getEnumValues());
+
+        addDisplayNameToEnumValues(typeMappings, enumeration);
+
+        return rosettaEnumeration;
+    }
+
+    private void addDisplayNameToEnumValues(RosettaXsdMapping typeMappings, List<XsdEnumeration> enumeration) {
+        enumeration.forEach(ev -> {
+                    RosettaEnumValue rosettaEnumValue = typeMappings.getEnumValue(ev);
+                    String originalXsdName = ev.getValue();
+                    if (!rosettaEnumValue.getName().equals(originalXsdName)) {
+                        rosettaEnumValue.setDisplay(originalXsdName);
+                    }
+                }
+        );
+    }
+
+    @Override
+    public void completeType(XsdSimpleType xsdType, RosettaXsdMapping typeMappings) {
+
+    }
+
+    private RosettaEnumValue registerEnumValue(XsdEnumeration ev, RosettaXsdMapping typeMappings, ImportTargetConfig targetConfig) {
+        String value = util.toEnumValueName(ev.getValue(), targetConfig);
+        RosettaEnumValue rosettaEnumValue = RosettaFactory.eINSTANCE.createRosettaEnumValue();
+        rosettaEnumValue.setName(value);
+        util.extractDocs(ev).ifPresent(rosettaEnumValue::setDefinition);
+
+        typeMappings.registerEnumValue(ev, rosettaEnumValue);
+
+        return rosettaEnumValue;
+    }
+
+    public Map<RosettaEnumeration, TypeXMLConfiguration> getXMLConfiguration(XsdSimpleType xsdType, RosettaXsdMapping xsdMapping, String schemaTargetNamespace) {
+        Map<String, String> enumValueMap = new LinkedHashMap<>();
+        xsdType.getAllRestrictions().stream().flatMap(r -> r.getEnumeration().stream())
+                .forEach(ev -> {
+                    RosettaEnumValue rosettaEnumValue = xsdMapping.getEnumValue(ev);
+                    if (!rosettaEnumValue.getName().equals(ev.getValue())) {
+                        enumValueMap.put(rosettaEnumValue.getName(), ev.getValue());
+                    }
+                });
+        if (enumValueMap.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        RosettaEnumeration rosettaEnumeration = xsdMapping.getRosettaEnumerationFromSimple(xsdType);
+        return Collections.singletonMap(rosettaEnumeration, new TypeXMLConfiguration(
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.empty(),
+                Optional.of(enumValueMap)));
+    }
 }
